# voleeo-api

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml
codegen/: Cargo.toml
codegen/src/: main.rs
crates-tauri/voleeo-mac-window/: Cargo.toml
crates-tauri/voleeo-mac-window/src/: lib.rs  mac.rs
crates/voleeo-auth/: Cargo.toml
crates/voleeo-auth/src/: digest.rs  encode.rs  lib.rs  oauth1.rs  oauth2.rs  sigv4.rs
crates/voleeo-cookies/src/: resolve.rs
crates/voleeo-core/: Cargo.toml
crates/voleeo-core/src/: auth.rs  bundle.rs  error.rs  git.rs  lib.rs  net.rs  types.rs
crates/voleeo-core/src/auth/: config.rs  mod.rs  schemes.rs
crates/voleeo-core/src/types/: common.rs  grpc.rs  http.rs  mod.rs  ws.rs
crates/voleeo-crypto/src/: keys.rs  lib.rs  text.rs
crates/voleeo-export/: Cargo.toml
crates/voleeo-export/src/: asyncapi.rs  auth.rs  lib.rs  postman.rs  voleeo.rs
crates/voleeo-export/tests/: roundtrip.rs
crates/voleeo-git/src/: branch.rs  commit.rs  conflict.rs  cred.rs  entity.rs  lib.rs  log.rs  remote.rs  repo.rs  status.rs  sync.rs  tests.rs
crates/voleeo-grpc/: Cargo.toml
crates/voleeo-grpc/src/: channel.rs  codec.rs  convert.rs  executor.rs  lib.rs  proto_print.rs  tests.rs
crates/voleeo-grpc/src/descriptors/: mod.rs  protos.rs  reflection.rs  schema.rs
crates/voleeo-grpc/src/manager/: mod.rs  streaming.rs
crates/voleeo-http/: Cargo.toml
crates/voleeo-http/src/: auth.rs  auth_retry.rs  body.rs  dns.rs  executor.rs  lib.rs  ntlm.rs  redirect.rs  send_body.rs  sse.rs  sse_accum.rs
crates/voleeo-http/src/ntlm/: messages.rs  mod.rs
crates/voleeo-import/: Cargo.toml
crates/voleeo-import/src/: bruno.rs  convert.rs  detect.rs  insomnia.rs  ir.rs  lib.rs  openapi.rs  postman.rs  swagger.rs  util.rs  yaak.rs
crates/voleeo-import/tests/: bruno.rs  convert.rs  insomnia.rs  openapi.rs  postman.rs  swagger.rs  yaak.rs
crates/voleeo-import/tests/fixtures/bruno/: collection.yml
crates/voleeo-import/tests/fixtures/insomnia/: cyclic.json  export.json
crates/voleeo-import/tests/fixtures/openapi/: petstore.yaml
crates/voleeo-import/tests/fixtures/postman/: sample.postman_collection.json
crates/voleeo-import/tests/fixtures/swagger/: petstore.yaml
crates/voleeo-import/tests/fixtures/yaak/: export.json
crates/voleeo-mcp/: Cargo.toml
crates/voleeo-mcp/src/: lib.rs  server.rs
crates/voleeo-mcp/src/api/: cookie.rs  env.rs  folder.rs  grpc.rs  mod.rs  redact.rs  request.rs  response.rs  snapshot.rs  sse.rs  tools.rs  websocket.rs  workspace.rs
crates/voleeo-mcp/src/api/request/: crud.rs  mod.rs  send.rs
crates/voleeo-mcp/src/api/tools/: mod.rs  request.rs  snapshot.rs  streaming.rs
crates/voleeo-mcp/src/resolve/: grpc.rs  http.rs  mod.rs  system_env.rs  text.rs  vars.rs
crates/voleeo-oauth/: Cargo.toml
crates/voleeo-oauth/src/: flow.rs  lib.rs  loopback.rs  token_cache.rs
crates/voleeo-storage/: Cargo.toml
crates/voleeo-storage/src/: cookies.rs  environment.rs  grpc.rs  grpc_response.rs  grpc_transcript.rs  lib.rs  response.rs  selection.rs  snapshot.rs  snapshot_redact.rs  workspace.rs  ws.rs  ws_transcript.rs
crates/voleeo-storage/src/request/: folders.rs  mod.rs  requests.rs
crates/voleeo-ws/src/: lib.rs
plugins/1password/: package.json
plugins/1password/bridge/: main.test.ts  main.ts
plugins/1password/src/: index.test.ts  index.ts
plugins/curl/src/: format.ts  serialize.test.ts  serialize.ts
plugins/encrypt/src/: index.ts
plugins/fetch/src/: serialize.test.ts  serialize.ts
plugins/grpcurl/: package.json
plugins/grpcurl/src/: index.ts  serialize.test.ts  serialize.ts
plugins/httpie/src/: serialize.test.ts  serialize.ts
plugins/themes/src/: index.ts
plugins/uuid/: package.json
scripts/: build-sidecar.mjs  check-file-sizes.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  mcp_server.rs  menu.rs  platform.rs  secret_store.rs  state.rs  window_chrome.rs
src-tauri/src/commands/: cookie.rs  debug.rs  environment.rs  graphql.rs  http.rs  import.rs  info.rs  mod.rs  oauth2.rs  onepassword.rs  request.rs  settings.rs  snapshot.rs  voleeo_bundle.rs  websocket.rs  workspace.rs
src-tauri/src/commands/export/: mod.rs  reflection.rs  secrets.rs  write.rs
src-tauri/src/commands/git/: conflict.rs  entity.rs  mod.rs  remote.rs  repo.rs
src-tauri/src/commands/grpc/: call.rs  crud.rs  introspect.rs  mod.rs  stream.rs
src-tauri/src/commands/workspace/: crud.rs  encryption.rs  mod.rs  settings.rs  sync_dir.rs
src-web/: package.json  vite.config.ts
src-web/src/: App.tsx  main.tsx
src-web/src/components/: ActiveIndicator.tsx  CodeView.tsx  ColorPickerPopover.tsx  Dot.tsx  EditorFunctionModal.tsx  ErrorBoundary.tsx  FunctionModalShell.tsx  Glyph.tsx  IconToggle.tsx  InlineNewNavItem.tsx  JsonView.tsx  ManagementModal.tsx  Primitives.tsx  RequestFunctionForm.tsx  RequestFunctionModal.tsx  ResponseFunctionForm.tsx  ResponseFunctionModal.tsx  ResponseHeader.tsx  SearchField.tsx  Segmented.tsx  tokens.ts
src-web/src/config/: events.ts  shortcuts.ts
src-web/src/hooks/: useActiveVarKeys.ts  useChipEditableHandlers.ts  useDisableNativeAutofill.ts  useGitReveal.ts  useGrpcSync.ts  useKeydown.ts  useMcpSync.ts  useResponseSummaries.ts  useRowFlash.ts  useSseSync.ts  useStableDrag.ts  useWorkspaceSwitcher.ts  useWsSync.ts
src-web/src/layout/: BranchModals.tsx  CommandPalette.tsx  ImportRequestsModal.tsx  MainLayout.tsx  NewItemButton.tsx  PreferencesButton.tsx  ShaderBackground.tsx  SourceControlMenu.tsx  Toast.tsx  TopBar.tsx  UpdateBanner.tsx  WindowControls.tsx  WorkspaceSwitcher.tsx  exportWindow.ts  gitMenu.ts  menuActions.ts  settingsWindow.ts  windowFocus.ts  windowsMenu.ts
src-web/src/lib/: authSchemes.test.ts  authSchemes.ts  boundedArray.ts  caret.test.ts  caret.ts  caretOffset.ts  caretSelection.ts  caretStoredValue.ts  contentTypes.ts  curlFlags.ts  curlParser.ts  error.ts  httpieParser.ts  ids.ts  platform.ts  schemas.ts  shellTokenize.test.ts  (+9 more)
(+387 files in other folders)
