[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/voleeo-core",
    "crates/voleeo-cookies",
    "crates/voleeo-crypto",
    "crates/voleeo-storage",
    "crates/voleeo-http",
    "crates/voleeo-auth",
    "crates/voleeo-oauth",
    "crates/voleeo-ws",
    "crates/voleeo-grpc",
    "crates/voleeo-git",
    "crates/voleeo-mcp",
    "crates-tauri/voleeo-mac-window",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/voleeo/voleeo-api"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
specta = { version = "=2.0.0-rc.25", features = ["ulid", "derive"] }
tokio = { version = "1", features = ["full"] }
keyring = "4"
keyring-core = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
aes-gcm = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "brotli", "deflate", "cookies", "rustls", "http2", "stream", "multipart", "form"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
tokio-stream = "0.1"
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen", "tls-ring", "tls-native-roots"] }
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["serde", "text-format"] }
protox = "0.9"
uuid = { version = "1", features = ["v4"] }
tauri = { version = "2", features = [] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "ssh", "https"] }
