[package]
name = "voleeo"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"
default-run = "voleeo"

[lib]
name = "voleeo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "voleeo"
path = "src/main.rs"

[[bin]]
name = "voleeo-mcp-bridge"
path = "src/bin/voleeo_mcp_bridge.rs"

[dependencies]
voleeo-core = { path = "../crates/voleeo-core" }
voleeo-cookies = { path = "../crates/voleeo-cookies" }
voleeo-crypto = { path = "../crates/voleeo-crypto" }
voleeo-http = { path = "../crates/voleeo-http" }
voleeo-ws = { path = "../crates/voleeo-ws" }
voleeo-grpc = { path = "../crates/voleeo-grpc" }
voleeo-git = { path = "../crates/voleeo-git" }
voleeo-mcp = { path = "../crates/voleeo-mcp" }
voleeo-import = { path = "../crates/voleeo-import" }
voleeo-storage = { path = "../crates/voleeo-storage" }
voleeo-auth = { path = "../crates/voleeo-auth" }
voleeo-oauth = { path = "../crates/voleeo-oauth" }
chrono = { workspace = true }
reqwest = { workspace = true }
open = "5"
keyring = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
font-kit = "0.14"
# E2E bridge for the voleeo-e2e suite. Registered only under debug_assertions
# (see lib.rs), so its WebSocket server never starts in release builds.
tauri-plugin-mcp-bridge = "0.11"

# macOS-only: native titlebar via cocoa/objc. Not compiled on Linux/Windows.
[target.'cfg(target_os = "macos")'.dependencies]
voleeo-mac-window = { path = "../crates-tauri/voleeo-mac-window" }

# Windows-only: directory junctions for workspace sync links (no privilege
# needed, unlike symlink_dir). See src/platform.rs.
[target.'cfg(windows)'.dependencies]
junction = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
