[package]
name = "voleeo-mac-window"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"
rand = "0.9.0"
serde_json = { workspace = true }

[dependencies]
tauri = { workspace = true }
