[package]
name = "voleeo-mac-window"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["objc2-core-foundation"] }
rand = "0.10.1"
serde_json = { workspace = true }

[dependencies]
tauri = { workspace = true }
