[package]
name = "voleeo-auth"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
chrono = { workspace = true }
hmac = "0.12"
sha2 = "0.11"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.22"
rand = { workspace = true }
rsa = { version = "0.9", features = ["sha1", "sha2"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
