[package]
name = "voleeo-export"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
voleeo-core = { path = "../voleeo-core" }
voleeo-import = { path = "../voleeo-import" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
