[package]
name = "voleeo-grpc"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
tonic = { workspace = true }
tonic-reflection = { version = "0.14", default-features = false }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
http = "1"

[dev-dependencies]
tempfile = "3"
