[package]
name = "voleeo-import"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
