[package]
name = "voleeo-mcp"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
voleeo-storage = { path = "../voleeo-storage" }
voleeo-http = { path = "../voleeo-http" }
voleeo-ws = { path = "../voleeo-ws" }
voleeo-grpc = { path = "../voleeo-grpc" }
voleeo-crypto = { path = "../voleeo-crypto" }
voleeo-cookies = { path = "../voleeo-cookies" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
subtle = "2"

[dev-dependencies]
tempfile = "3"
