[package]
name = "voleeo-oauth"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
voleeo-core = { path = "../voleeo-core" }
voleeo-auth = { path = "../voleeo-auth" }
voleeo-crypto = { path = "../voleeo-crypto" }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
